Fix 404 component on mobile

--- a/src/sass/components/_not-found.scss
+++ b/src/sass/components/_not-found.scss
@@ -1,5 +1,9 @@
 .not-found {
     text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     &__caption {
         font-family: $font-family-secondary;
@@ -9,8 +13,18 @@
     }
 
     &__404 {
-        font-size: 25rem;
+        font-size: 15rem;
         line-height: 1;
         margin-top: 0;
+    }
+
+    &__content {
+        margin-top: 2rem;
+    }
+
+    @media screen and (min-width: 768px) {
+        &__404 {
+            font-size: 25rem;
+        }
     }
 }
