--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,6 +32,13 @@ body {
     flex-direction: column;
 }
 
+main {
+    flex: 1 1 auto;
+    & > .container {
+        height: 100%;
+    }
+}
+
 h1,
 h2,
 h3,
